--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "format:fix": "prettier --write --list-different ."
   },
   "dependencies": {
+    "@vercel/analytics": "^1.2.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "framer-motion": "^11.0.5",
