--- a/package.json
+++ b/package.json
@@ -11,10 +11,11 @@
     "format:fix": "prettier --write --list-different ."
   },
   "dependencies": {
+    "@next/font": "^14.2.3",
     "@vercel/analytics": "^1.2.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
-    "framer-motion": "^11.0.5",
+    "framer-motion": "^11.1.7",
     "lucide-react": "^0.331.0",
     "next": "14.1.0",
     "react": "^18",
