--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@vercel/analytics": "^1.2.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
+    "eslint-plugin-prettier": "^5.1.3",
     "framer-motion": "^11.1.7",
     "lucide-react": "^0.331.0",
     "next": "14.1.0",
@@ -37,7 +38,7 @@
     "eslint-config-next": "14.1.0",
     "eslint-config-prettier": "^9.1.0",
     "postcss": "^8",
-    "prettier": "^2.8.8",
+    "prettier": "^3.2.5",
     "tailwindcss": "^3.3.0",
     "typescript": "^5"
   }
